--- a/index.html
+++ b/index.html
@@ -2,235 +2,260 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Agência DG - Comprar Seguidores</title>
+<title>Agência DG | Comprar Seguidores</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
-margin: 0;
-font-family: Arial, sans-serif;
-background: #f2f2f2;
+body{
+margin:0;
+font-family:Arial,Helvetica,sans-serif;
+background:#f2f2f2;
 }
-
-header {
-background: #ffffff;
-padding: 15px 30px;
-display: flex;
-justify-content: space-between;
-align-items: center;
+header{
+background:#000;
+color:#FFD600;
+padding:15px;
+text-align:center;
+font-size:22px;
+font-weight:bold;
 }
-
-header h1 {
-color: #e53935;
-font-size: 20px;
+.hero{
+background:#FFD600;
+color:#000;
+padding:40px 20px;
+text-align:center;
 }
-
-.hero {
-background: #e53935;
-color: #fff;
-padding: 60px 20px;
-text-align: center;
+.hero h1{margin:0;font-size:32px;}
+.hero p{margin-top:10px;font-size:18px;}
+.section{
+max-width:1100px;
+margin:auto;
+padding:40px 20px;
 }
-
-.hero h2 {
-font-size: 36px;
-margin-bottom: 15px;
+.section h2{
+text-align:center;
+margin-bottom:25px;
 }
-
-.hero p {
-font-size: 18px;
+.grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+gap:20px;
 }
-
-.section {
-padding: 40px 20px;
-max-width: 1100px;
-margin: auto;
+.card{
+background:#fff;
+border-radius:8px;
+padding:20px;
+text-align:center;
+box-shadow:0 0 10px rgba(0,0,0,.1);
 }
-
-.section h3 {
-margin-bottom: 20px;
+.card h3{
+font-size:26px;
+margin:10px 0;
 }
-
-.grid {
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-gap: 20px;
+.card p{
+font-size:18px;
+margin:10px 0;
 }
-
-.card {
-background: #fff;
-border-radius: 8px;
-padding: 20px;
-text-align: center;
+.card button{
+width:100%;
+padding:12px;
+background:#000;
+color:#FFD600;
+border:none;
+border-radius:6px;
+font-size:16px;
+cursor:pointer;
 }
-
-.card h4 {
-font-size: 28px;
-color: #e53935;
-}
-
-.card p {
-margin: 10px 0;
-}
-
-.card button {
-background: #e53935;
-color: #fff;
-border: none;
-padding: 12px;
-width: 100%;
-border-radius: 6px;
-cursor: pointer;
-}
-
-.card button:hover {
-background: #c62828;
+.card button:hover{
+background:#222;
 }
 
 /* MODAL */
-.modal {
-display: none;
-position: fixed;
-inset: 0;
-background: rgba(0,0,0,0.6);
-justify-content: center;
-align-items: center;
+.modal{
+display:none;
+position:fixed;
+inset:0;
+background:rgba(0,0,0,.7);
+justify-content:center;
+align-items:center;
+z-index:999;
 }
-
-.modal-content {
-background: #fff;
-padding: 25px;
-width: 95%;
-max-width: 420px;
-border-radius: 8px;
+.modal-content{
+background:#fff;
+padding:25px;
+width:95%;
+max-width:420px;
+border-radius:8px;
 }
-
-.modal-content h3 {
-margin-top: 0;
+.close{
+text-align:right;
+font-weight:bold;
+cursor:pointer;
+color:red;
 }
-
-.modal-content input {
-width: 100%;
-padding: 10px;
-margin-bottom: 10px;
+.modal-content input{
+width:100%;
+padding:10px;
+margin-bottom:10px;
 }
-
-.modal-content button {
-width: 100%;
-padding: 12px;
-background: #e53935;
-color: #fff;
-border: none;
-border-radius: 6px;
+.modal-content button{
+width:100%;
+padding:12px;
+background:#000;
+color:#FFD600;
+border:none;
+border-radius:6px;
+margin-top:10px;
+cursor:pointer;
 }
-
-.pix {
-text-align: center;
+.pix{
+text-align:center;
 }
-
-.pix strong {
-display: block;
-margin: 10px 0;
+.pix img{
+width:220px;
+margin:10px auto;
+display:block;
 }
-
-.close {
-text-align: right;
-cursor: pointer;
-color: red;
+.pix input{
+width:100%;
+padding:10px;
+margin-top:10px;
+}
+small{
+font-size:12px;
 }
 </style>
 </head>
 
 <body>
 
-<header>
-<h1>Agência DG</h1>
-</header>
+<header>AGÊNCIA DG</header>
 
 <section class="hero">
-<h2>Comprar Seguidores no Instagram</h2>
+<h1>Comprar Seguidores Instagram</h1>
 <p>Seguidores Mundiais e Brasileiros • Pagamento via PIX</p>
 </section>
 
 <section class="section">
-<h3>Seguidores Mundiais</h3>
+<h2>Seguidores Mundiais</h2>
 <div class="grid">
-<div class="card"><h4>100</h4><p>R$ 10,00</p><button onclick="comprar('100 Seguidores Mundiais','10,00')">Comprar Agora</button></div>
-<div class="card"><h4>500</h4><p>R$ 25,00</p><button onclick="comprar('500 Seguidores Mundiais','25,00')">Comprar Agora</button></div>
-<div class="card"><h4>1.000</h4><p>R$ 47,00</p><button onclick="comprar('1.000 Seguidores Mundiais','47,00')">Comprar Agora</button></div>
-<div class="card"><h4>2.500</h4><p>R$ 110,00</p><button onclick="comprar('2.500 Seguidores Mundiais','110,00')">Comprar Agora</button></div>
+<div class="card"><h3>100</h3><p>R$ 10,00</p><button onclick="comprar('100 Seguidores Mundiais','10.00')">Comprar Agora</button></div>
+<div class="card"><h3>500</h3><p>R$ 25,00</p><button onclick="comprar('500 Seguidores Mundiais','25.00')">Comprar Agora</button></div>
+<div class="card"><h3>1.000</h3><p>R$ 47,00</p><button onclick="comprar('1.000 Seguidores Mundiais','47.00')">Comprar Agora</button></div>
+<div class="card"><h3>2.500</h3><p>R$ 110,00</p><button onclick="comprar('2.500 Seguidores Mundiais','110.00')">Comprar Agora</button></div>
 </div>
 </section>
 
 <section class="section">
-<h3>Seguidores Brasileiros</h3>
+<h2>Seguidores Brasileiros</h2>
 <div class="grid">
-<div class="card"><h4>250</h4><p>R$ 30,00</p><button onclick="comprar('250 Seguidores Brasileiros','30,00')">Comprar Agora</button></div>
-<div class="card"><h4>500</h4><p>R$ 45,00</p><button onclick="comprar('500 Seguidores Brasileiros','45,00')">Comprar Agora</button></div>
-<div class="card"><h4>1.000</h4><p>R$ 85,00</p><button onclick="comprar('1.000 Seguidores Brasileiros','85,00')">Comprar Agora</button></div>
-<div class="card"><h4>1.500</h4><p>R$ 127,00</p><button onclick="comprar('1.500 Seguidores Brasileiros','127,00')">Comprar Agora</button></div>
+<div class="card"><h3>250</h3><p>R$ 30,00</p><button onclick="comprar('250 Seguidores Brasileiros','30.00')">Comprar Agora</button></div>
+<div class="card"><h3>500</h3><p>R$ 45,00</p><button onclick="comprar('500 Seguidores Brasileiros','45.00')">Comprar Agora</button></div>
+<div class="card"><h3>1.000</h3><p>R$ 85,00</p><button onclick="comprar('1.000 Seguidores Brasileiros','85.00')">Comprar Agora</button></div>
+<div class="card"><h3>1.500</h3><p>R$ 127,00</p><button onclick="comprar('1.500 Seguidores Brasileiros','127.00')">Comprar Agora</button></div>
 </div>
 </section>
 
-<!-- MODAL -->
+<!-- MODAL FORM -->
 <div class="modal" id="modal">
 <div class="modal-content">
 <div class="close" onclick="fechar()">X</div>
 <h3 id="produto"></h3>
 <p>Valor: R$ <span id="valor"></span></p>
-
 <input id="nome" placeholder="Nome completo">
 <input id="whats" placeholder="WhatsApp">
-<input id="email" placeholder="Email">
+<input id="email" placeholder="E-mail">
 <input id="link" placeholder="Link do Instagram">
-
 <button onclick="pagar()">Ir para pagamento</button>
 </div>
 </div>
 
+<!-- MODAL PIX -->
 <div class="modal" id="pix">
 <div class="modal-content pix">
 <div class="close" onclick="fechar()">X</div>
 <h3>Pagamento via PIX</h3>
-<p>Chave PIX:</p>
-<strong>dbaf300d-377c-478c-aad4-9d6340ba216c</strong>
-<p>Nome: Diego Santos</p>
-<p>Após o pagamento, envie o comprovante.</p>
+<p><strong id="pixProduto"></strong></p>
+<p>Valor: <strong>R$ <span id="pixValor"></span></strong></p>
+
+<img id="qrcode">
+<input id="pixCopia" readonly>
+
+<button onclick="copiarPix()">Copiar PIX</button>
 <button onclick="whatsapp()">Enviar comprovante</button>
+
+<small>Após o pagamento, envie o comprovante para finalizar.</small>
 </div>
 </div>
 
 <script>
-let produtoSelecionado = '';
-let valorSelecionado = '';
+let produtoSelecionado="",valorSelecionado="";
+const chavePix="dbaf300d-377c-478c-aad4-9d6340ba216c";
+const nomePix="Diego Santos";
+const cidadePix="SAO PAULO";
 
-function comprar(produto, valor) {
-produtoSelecionado = produto;
-valorSelecionado = valor;
-document.getElementById('produto').innerText = produto;
-document.getElementById('valor').innerText = valor;
-document.getElementById('modal').style.display = 'flex';
+function comprar(p,v){
+produtoSelecionado=p;
+valorSelecionado=v;
+document.getElementById("produto").innerText=p;
+document.getElementById("valor").innerText=v;
+document.getElementById("modal").style.display="flex";
+}
+function fechar(){
+document.getElementById("modal").style.display="none";
+document.getElementById("pix").style.display="none";
+}
+function pagar(){
+document.getElementById("modal").style.display="none";
+document.getElementById("pix").style.display="flex";
+
+document.getElementById("pixProduto").innerText=produtoSelecionado;
+document.getElementById("pixValor").innerText=valorSelecionado;
+
+const payload=gerarPix(chavePix,nomePix,cidadePix,valorSelecionado);
+document.getElementById("pixCopia").value=payload;
+document.getElementById("qrcode").src=
+"https://api.qrserver.com/v1/create-qr-code/?size=300x300&data="+encodeURIComponent(payload);
+}
+function copiarPix(){
+const i=document.getElementById("pixCopia");
+i.select();document.execCommand("copy");
+alert("PIX copiado!");
+}
+function whatsapp(){
+const msg=`Olá, fiz o pagamento via PIX.
+
+Nome: ${nome.value}
+WhatsApp: ${whats.value}
+Email: ${email.value}
+Produto: ${produtoSelecionado}
+Valor: R$ ${valorSelecionado}
+Link: ${link.value}
+
+Segue o comprovante.`;
+window.open("https://wa.me/5511977030517?text="+encodeURIComponent(msg));
 }
 
-function fechar() {
-document.getElementById('modal').style.display = 'none';
-document.getElementById('pix').style.display = 'none';
+/* GERADOR PIX */
+function gerarPix(chave,nome,cidade,valor){
+function campo(id,v){return id+v.length.toString().padStart(2,"0")+v}
+let p=
+campo("00","01")+
+campo("26",campo("00","BR.GOV.BCB.PIX")+campo("01",chave))+
+campo("52","0000")+campo("53","986")+
+campo("54",parseFloat(valor).toFixed(2))+
+campo("58","BR")+campo("59",nome.substring(0,25))+
+campo("60",cidade.substring(0,15))+
+campo("62",campo("05","***"));
+p+="6304"+crc16(p);return p;
 }
-
-function pagar() {
-document.getElementById('modal').style.display = 'none';
-document.getElementById('pix').style.display = 'flex';
+function crc16(str){
+let crc=0xFFFF;
+for(let c of str){
+crc^=c.charCodeAt(0)<<8;
+for(let i=0;i<8;i++)crc=(crc&0x8000)?(crc<<1)^0x1021:crc<<1;
 }
-
-function whatsapp() {
-const nome = document.getElementById('nome').value;
-const whats = document.getElementById('whats').value;
-const email = document.getElementById('email').value;
-const link = document.getElementById('link').value;
-
-const msg = `Olá, fiz o pagamento via PIX.%0A%0ANome: ${nome}%0AWhatsApp: ${whats}%0AEmail: ${email}%0AProduto: ${produtoSelecionado}%0AValor: R$ ${valorSelecionado}%0ALink: ${link}%0A%0ASegue o comprovante.`;
-
-window.open(`https://wa.me/5511977030517?text=${msg}`);
+return (crc&0xFFFF).toString(16).toUpperCase().padStart(4,"0");
 }
 </script>
 
