--- a/index.html
+++ b/index.html
@@ -7,103 +7,82 @@
 
 <style>
 :root{
---preto:#0f172a;
+--preto:#000;
 --amarelo:#FFD600;
---vermelho:#e53935;
+--branco:#fff;
 --cinza:#f4f4f4;
 }
 
 body{
 margin:0;
 font-family:Arial,Helvetica,sans-serif;
-background:#fff;
-color:#111;
+background:var(--branco);
+color:var(--preto);
 }
 
 header{
-background:#fff;
-padding:15px 30px;
-border-bottom:1px solid #eee;
+padding:15px;
 text-align:center;
-font-size:22px;
 font-weight:bold;
+font-size:22px;
+border-bottom:1px solid #eee;
 }
 
+/* HERO */
 .hero{
-background:linear-gradient(180deg,#ff3b30,#e53935);
-color:#fff;
-padding:70px 20px;
+background:var(--preto);
+color:var(--branco);
+padding:50px 20px;
 text-align:center;
 }
 
 .hero h1{
-font-size:40px;
+color:var(--amarelo);
 margin-bottom:10px;
 }
 
-.hero p{
-font-size:18px;
-opacity:.95;
-}
-
+/* SEÇÕES */
 .section{
-padding:60px 20px;
-max-width:1200px;
+padding:40px 20px;
+max-width:1100px;
 margin:auto;
 }
 
-.section-title{
+.section h2{
 text-align:center;
-font-size:30px;
-margin-bottom:40px;
+margin-bottom:30px;
 }
 
-.grid{
+/* CARDS */
+.cards{
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-gap:25px;
+grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+gap:20px;
 }
 
 .card{
-background:#f9fafb;
-border-radius:14px;
-padding:30px 20px;
+background:var(--cinza);
+padding:25px;
+border-radius:12px;
 text-align:center;
-box-shadow:0 15px 30px rgba(0,0,0,.08);
 }
 
-.card .qtd{
-font-size:42px;
-font-weight:bold;
-color:var(--vermelho);
+.card h3{
+font-size:36px;
+margin:0;
 }
 
-.card .tipo{
-margin-top:5px;
-font-size:16px;
-color:#555;
-}
-
-.card .preco{
-margin:15px 0;
-font-size:28px;
-font-weight:bold;
-color:var(--vermelho);
+.card p{
+margin:10px 0;
 }
 
 .card button{
-width:100%;
-padding:14px;
-background:var(--vermelho);
-color:#fff;
+background:var(--amarelo);
 border:none;
-border-radius:30px;
-font-size:16px;
+padding:12px 20px;
+font-weight:bold;
 cursor:pointer;
-}
-
-.card button:hover{
-opacity:.9;
+border-radius:8px;
 }
 
 /* MODAL */
@@ -111,95 +90,61 @@ opacity:.9;
 display:none;
 position:fixed;
 inset:0;
-background:rgba(0,0,0,.7);
+background:rgba(0,0,0,.6);
 justify-content:center;
 align-items:center;
-z-index:999;
 }
 
 .modal-content{
 background:#fff;
 padding:25px;
-width:95%;
+width:100%;
 max-width:420px;
 border-radius:12px;
 }
 
-.close{
-text-align:right;
-font-weight:bold;
-cursor:pointer;
-color:#e53935;
+.modal-content h3{
+margin-top:0;
 }
 
-input{
+.modal-content input{
 width:100%;
-padding:12px;
-margin-bottom:12px;
-border-radius:8px;
-border:1px solid #ddd;
+padding:10px;
+margin-bottom:10px;
 }
 
 .modal-content button{
 width:100%;
-padding:14px;
-background:#000;
-color:#FFD600;
+background:var(--amarelo);
 border:none;
-border-radius:8px;
-font-size:16px;
-cursor:pointer;
+padding:12px;
+font-weight:bold;
 }
 
-.pix{
-text-align:center;
-}
-
-.pix img{
-width:220px;
-margin:15px auto;
-display:block;
-}
-
-small{
-font-size:12px;
-color:#555;
+.pix-box{
+background:#f9f9f9;
+padding:15px;
+margin-top:15px;
+word-break:break-all;
+display:none;
 }
 
 /* AVALIAÇÕES */
 .reviews{
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
 gap:20px;
 }
 
 .review{
-background:#f9fafb;
+background:#f4f4f4;
 padding:20px;
-border-radius:12px;
-}
-
-.review strong{
-display:block;
-margin-bottom:5px;
+border-radius:10px;
 }
 
 /* FAQ */
-.faq-item{
-background:#f9fafb;
+.faq details{
 margin-bottom:10px;
-border-radius:8px;
-}
-
-.faq-item summary{
-padding:15px;
-cursor:pointer;
-font-weight:bold;
-}
-
-.faq-item p{
-padding:0 15px 15px;
-color:#444;
 }
 </style>
 </head>
@@ -210,83 +155,114 @@ color:#444;
 
 <section class="hero">
 <h1>Comprar Seguidores no Instagram</h1>
-<p>Cresça rápido com segurança • Pagamento via PIX</p>
+<p>Seguro • Rápido • Sem senha</p>
 </section>
 
+<!-- SEGUIDORES MUNDIAIS -->
 <section class="section">
-<h2 class="section-title">Seguidores Mundiais</h2>
-
-<div class="grid">
+<h2>Seguidores Mundiais</h2>
+<div class="cards">
 <div class="card">
-<div class="qtd">100</div>
-<div class="tipo">Seguidores Mundiais</div>
-<div class="preco">R$ 10.00</div>
-<button onclick="comprar('100 Seguidores Mundiais','10')">Comprar Agora</button>
+<h3>100</h3>
+<p>R$ 10,00</p>
+<button onclick="abrirPagamento('10')">Comprar Agora</button>
 </div>
-
 <div class="card">
-<div class="qtd">500</div>
-<div class="tipo">Seguidores Mundiais</div>
-<div class="preco">R$ 25.00</div>
-<button onclick="comprar('500 Seguidores Mundiais','25')">Comprar Agora</button>
+<h3>500</h3>
+<p>R$ 25,00</p>
+<button onclick="abrirPagamento('25')">Comprar Agora</button>
 </div>
-
 <div class="card">
-<div class="qtd">1.000</div>
-<div class="tipo">Seguidores Mundiais</div>
-<div class="preco">R$ 47.00</div>
-<button onclick="comprar('1.000 Seguidores Mundiais','47')">Comprar Agora</button>
+<h3>1.000</h3>
+<p>R$ 47,00</p>
+<button onclick="abrirPagamento('47')">Comprar Agora</button>
 </div>
-
 <div class="card">
-<div class="qtd">2.500</div>
-<div class="tipo">Seguidores Mundiais</div>
-<div class="preco">R$ 110.00</div>
-<button onclick="comprar('2.500 Seguidores Mundiais','110')">Comprar Agora</button>
+<h3>2.500</h3>
+<p>R$ 110,00</p>
+<button onclick="abrirPagamento('110')">Comprar Agora</button>
 </div>
 </div>
 </section>
 
+<!-- SEGUIDORES BRASILEIROS -->
 <section class="section">
-<h2 class="section-title">O que nossos clientes dizem</h2>
+<h2>Seguidores Brasileiros</h2>
+<div class="cards">
+<div class="card">
+<h3>250</h3>
+<p>R$ 30,00</p>
+<button onclick="abrirPagamento('30')">Comprar Agora</button>
+</div>
+<div class="card">
+<h3>500</h3>
+<p>R$ 45,00</p>
+<button onclick="abrirPagamento('45')">Comprar Agora</button>
+</div>
+</div>
+</section>
 
+<!-- MODAL PAGAMENTO -->
+<div class="modal" id="modal">
+<div class="modal-content">
+<h3>Finalizar Pedido</h3>
+
+<input placeholder="Nome completo">
+<input placeholder="WhatsApp">
+<input placeholder="Email">
+<input placeholder="Link do Instagram">
+
+<button onclick="mostrarPix()">Mostrar PIX</button>
+
+<div class="pix-box" id="pixBox">
+<strong>Pagamento via PIX</strong>
+<p id="pixCode"></p>
+</div>
+
+<button onclick="fechar()">Fechar</button>
+</div>
+</div>
+
+<!-- AVALIAÇÕES -->
+<section class="section">
+<h2>O que nossos clientes dizem</h2>
 <div class="reviews">
-<div class="review"><strong>Raquel Moraes</strong>⭐⭐⭐⭐⭐<br>Resultados incríveis! Atendimento nota 10.</div>
-<div class="review"><strong>Eduardo Moreira</strong>⭐⭐⭐⭐⭐<br>Recebi tudo rápido e com qualidade.</div>
-<div class="review"><strong>Marcelo Moreira</strong>⭐⭐⭐⭐⭐<br>Serviço confiável, recomendo!</div>
+<div class="review">⭐⭐⭐⭐⭐<br>“Entrega rápida e segura.”</div>
+<div class="review">⭐⭐⭐⭐⭐<br>“Meu Instagram cresceu muito.”</div>
+<div class="review">⭐⭐⭐⭐⭐<br>“Recomendo demais!”</div>
 </div>
 </section>
 
-<section class="section">
-<h2 class="section-title">Perguntas Frequentes</h2>
-
-<details class="faq-item">
-<summary>Preciso fornecer minha senha?</summary>
-<p>Não. Nunca pedimos senha.</p>
-</details>
-
-<details class="faq-item">
-<summary>Em quanto tempo recebo os seguidores?</summary>
-<p>Normalmente em até 24 horas.</p>
-</details>
-
-<details class="faq-item">
-<summary>É seguro comprar seguidores?</summary>
-<p>Sim, utilizamos métodos seguros.</p>
-</details>
+<!-- FAQ -->
+<section class="section faq">
+<h2>Perguntas Frequentes</h2>
+<details><summary>Preciso informar minha senha?</summary><p>Não.</p></details>
+<details><summary>É seguro?</summary><p>Sim.</p></details>
+<details><summary>Quanto tempo demora?</summary><p>Início em poucas horas.</p></details>
 </section>
 
 <script>
-let produtoSelecionado="",valorSelecionado="";
-const pix={
-"10":"00020126580014BR.GOV.BCB.PIX0136dbaf300d-377c-478c-aad4-9d6340ba216c520400005303986540510.005802BR5918Diego Santos Silva6009SAO PAULO62140510tizNNZGbQS6304E56C",
-"25":"00020126580014BR.GOV.BCB.PIX0136dbaf300d-377c-478c-aad4-9d6340ba216c520400005303986540525.005802BR5918Diego Santos Silva6009SAO PAULO62140510OfBPzHSlro6304B4EB",
-"47":"00020126580014BR.GOV.BCB.PIX0136dbaf300d-377c-478c-aad4-9d6340ba216c520400005303986540547.005802BR5918Diego Santos Silva6009SAO PAULO62140510DSvl4axZ5x6304F947",
-"110":"00020126580014BR.GOV.BCB.PIX0136dbaf300d-377c-478c-aad4-9d6340ba216c5204000053039865406110.005802BR5918Diego Santos Silva6009SAO PAULO62140510gFw2OMch7Z63040C75"
+let valorSelecionado = '';
+
+const pixCodes = {
+'10':'00020126580014BR.GOV.BCB.PIX0136dbaf300d-377c-478c-aad4-9d6340ba216c540510.00',
+'25':'00020126580014BR.GOV.BCB.PIX0136dbaf300d-377c-478c-aad4-9d6340ba216c540525.00',
+'47':'00020126580014BR.GOV.BCB.PIX0136dbaf300d-377c-478c-aad4-9d6340ba216c540547.00',
+'110':'00020126580014BR.GOV.BCB.PIX0136dbaf300d-377c-478c-aad4-9d6340ba216c5406110.00'
 };
 
-function comprar(p,v){
-alert(`Produto: ${p}\nValor: R$ ${v}.00\n\nPIX Copia e Cola:\n\n${pix[v]}`);
+function abrirPagamento(valor){
+valorSelecionado = valor;
+document.getElementById('modal').style.display='flex';
+}
+
+function mostrarPix(){
+document.getElementById('pixCode').innerText = pixCodes[valorSelecionado];
+document.getElementById('pixBox').style.display='block';
+}
+
+function fechar(){
+document.getElementById('modal').style.display='none';
 }
 </script>
 
